Header table PO DO PR

--- a/Klinik.Web/Content/Custom/Custom.css
+++ b/Klinik.Web/Content/Custom/Custom.css
@@ -11,3 +11,8 @@
 .marginbutton{
     margin-bottom:20px
 }
+.headertable {
+    text-align: center !important;
+    color: white !important;
+    background-color: #34495e !important;
+}
