--- a/Klinik.Web/Views/DeliveryOrder/CreateOrEditDeliveryOrder.cshtml
+++ b/Klinik.Web/Views/DeliveryOrder/CreateOrEditDeliveryOrder.cshtml
@@ -52,6 +52,7 @@
     <div class="panel-body">
         <div class="scrollTable">
             <table id="tblDeliveryOrder" class="table color-table success-table">
+                <caption class="headertable">@Klinik.Resources.UIMessages.DeliveryOrderDetailList</caption>
                 <thead>
                     <tr>
                         <th hidden>Id Obat</th>
