--- a/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
+++ b/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
@@ -41,6 +41,7 @@
     <div class="panel-body">
         <div class="scrollTable">
             <table id="tblPurchaseOrder" class="table color-table success-table">
+                <caption class="headertable">@Klinik.Resources.UIMessages.PurchaseRequestList</caption>
                 <thead>
                     <tr>
                         <th hidden>Id Obat</th>
