--- a/Klinik.Web/Views/PurchaseRequestPusat/CreateOrEditPurchaseRequestPusat.cshtml
+++ b/Klinik.Web/Views/PurchaseRequestPusat/CreateOrEditPurchaseRequestPusat.cshtml
@@ -41,6 +41,7 @@
     <div class="panel-body">
         <div class="scrollTable">
             <table id="tblPurchaseOrderPusat" class="table color-table success-table">
+                <caption class="headertable">@Klinik.Resources.UIMessages.PurchaseRequestPusatList</caption>
                 <thead>
                     <tr>
                         <th hidden>Id Obat</th>
