--- a/Klinik.Web/Views/MasterData/CreateOrEditClinic.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditClinic.cshtml
@@ -5,107 +5,106 @@
 }
 
 <section class="panel">
-    <header class="panel-heading">
-        <div class="panel-actions">
-            <a href="#" class="fa fa-caret-down"></a>
-        </div>
-        <h5 class="panel-title">Form @ViewBag.ActionType Clinic</h5>
-    </header>
-    <div class="panel-body">
-        <form class="form-horizontal form-bordered" method="post" action="/MasterData/CreateOrEditClinic">
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.ClinicCode</label>
-                <div class="col-md-4">
-                    @Html.HiddenFor(x => x.Id)
-                    @Html.TextBoxFor(x => x.Code, new { @class = "form-control", @id = "tbCode" })
-                    @Html.ValidationMessageFor(m => m.Code, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Name</label>
-                <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.Name, new { @class = "form-control", @id = "tbName" })
-                    @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
+	<form class="form-horizontal form-bordered" method="post" action="/MasterData/CreateOrEditClinic">
+		<header class="panel-heading">
+			<div class="panel-actions">
+				<a href="#" class="fa fa-caret-down"></a>
+			</div>
+			<h5 class="panel-title">Form @ViewBag.ActionType Clinic</h5>
+		</header>
+		<div class="panel-body">
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.ClinicCode</label>
+				<div class="col-md-4">
+					@Html.HiddenFor(x => x.Id)
+					@Html.TextBoxFor(x => x.Code, new { @class = "form-control", @id = "tbCode" })
+					@Html.ValidationMessageFor(m => m.Code, "", new { @class = "text-danger" })
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Name</label>
+				<div class="col-md-4">
+					@Html.TextBoxFor(x => x.Name, new { @class = "form-control", @id = "tbName" })
+					@Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
 
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">
-                    @Klinik.Resources.UIMessages.LegalNO
-                </label>
-                <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.LegalNumber, new { @class = "form-control", @id = "tbLegalNo" })
-                    @Html.ValidationMessageFor(m => m.LegalNumber, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.LegalDate</label>
-                <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.LegalDate, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "tbLegalDate" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">
-                    @Klinik.Resources.UIMessages.ContactNo
-                </label>
-                <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.ContactNumber, new { @class = "form-control", @id = "tbContactNo" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">
-                    @Klinik.Resources.UIMessages.City
-                </label>
-                <div class="col-md-4">
-                    @Html.DropDownListFor(p => p.CityId, (IEnumerable<SelectListItem>)ViewBag.Cities, new { @class = "form-control", @id = "ddlcity" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">
-                    @Klinik.Resources.UIMessages.ClinicType
-                </label>
-                <div class="col-md-4">
-                    @Html.DropDownListFor(p => p.ClinicType, (IEnumerable<SelectListItem>)ViewBag.ClinicTypes, new { @class = "form-control", @id = "ddlclinicType" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">
-                    @Klinik.Resources.UIMessages.Latitude
-                </label>
-                <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.Lat, new { @class = "form-control", @id = "tbLatitude" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">
-                    @Klinik.Resources.UIMessages.Longtitude
-                </label>
-                <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.Long, new { @class = "form-control", @id = "tbLongtitude" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Email</label>
-                <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.Email, new { @class = "form-control", @id = "tbEmail" })
-                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">
-                    @Klinik.Resources.UIMessages.Address
-                </label>
-                <div class="col-md-4">
-                    @Html.TextAreaFor(x => x.Address, new { @class = "form-control", @id = "tbAddress" })
-                </div>
-            </div>
-            <br />
-            <footer class="panel-footer">
-                <button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.Save</button>
-                <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
-            </footer>
-        </form>
-    </div>
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">
+					@Klinik.Resources.UIMessages.LegalNO
+				</label>
+				<div class="col-md-4">
+					@Html.TextBoxFor(x => x.LegalNumber, new { @class = "form-control", @id = "tbLegalNo" })
+					@Html.ValidationMessageFor(m => m.LegalNumber, "", new { @class = "text-danger" })
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.LegalDate</label>
+				<div class="col-md-4">
+					@Html.TextBoxFor(x => x.LegalDate, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "tbLegalDate" })
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">
+					@Klinik.Resources.UIMessages.ContactNo
+				</label>
+				<div class="col-md-4">
+					@Html.TextBoxFor(x => x.ContactNumber, new { @class = "form-control", @id = "tbContactNo" })
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">
+					@Klinik.Resources.UIMessages.City
+				</label>
+				<div class="col-md-4">
+					@Html.DropDownListFor(p => p.CityId, (IEnumerable<SelectListItem>)ViewBag.Cities, new { @class = "form-control", @id = "ddlcity" })
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">
+					@Klinik.Resources.UIMessages.ClinicType
+				</label>
+				<div class="col-md-4">
+					@Html.DropDownListFor(p => p.ClinicType, (IEnumerable<SelectListItem>)ViewBag.ClinicTypes, new { @class = "form-control", @id = "ddlclinicType" })
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">
+					@Klinik.Resources.UIMessages.Latitude
+				</label>
+				<div class="col-md-4">
+					@Html.TextBoxFor(x => x.Lat, new { @class = "form-control", @id = "tbLatitude" })
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">
+					@Klinik.Resources.UIMessages.Longtitude
+				</label>
+				<div class="col-md-4">
+					@Html.TextBoxFor(x => x.Long, new { @class = "form-control", @id = "tbLongtitude" })
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Email</label>
+				<div class="col-md-4">
+					@Html.TextBoxFor(x => x.Email, new { @class = "form-control", @id = "tbEmail" })
+					@Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">
+					@Klinik.Resources.UIMessages.Address
+				</label>
+				<div class="col-md-4">
+					@Html.TextAreaFor(x => x.Address, new { @class = "form-control", @id = "tbAddress" })
+				</div>
+			</div>
+		</div>
+		<div class="panel-footer">
+			<button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.Save</button>
+			<button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
+		</div>
+	</form>
 </section>
 
 @section Scripts {
