--- a/Klinik.Web/Views/MasterData/CreateOrEditProductMedicine.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditProductMedicine.cshtml
@@ -1,48 +1,47 @@
 ﻿@model Klinik.Entities.MasterData.ProductMedicineModel
 
 @{
-    ViewBag.Title = "CreateOrEditProductMedicine";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+	ViewBag.Title = "CreateOrEditProductMedicine";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <section class="panel">
-    <header class="panel-heading">
-        <div class="panel-actions">
-            <a href="#" class="fa fa-caret-down"></a>
-        </div>
-        <h5 class="panel-title">Form @ViewBag.ActionType Product Medicine</h5>
-    </header>
-    <div class="panel-body">
-        <form class="form-horizontal form-bordered" method="post" action="/MasterData/CreateOrEditProductMedicine">
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Product</label>
-                <div class="col-md-4">
-                    @Html.DropDownListFor(p => p.ProductID, (IEnumerable<SelectListItem>)ViewBag.ProductList, new { @class = "form-control", @id = "ddlProduct" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Medicine</label>
-                <div class="col-md-4">
-                    @Html.DropDownListFor(p => p.MedicineID, (IEnumerable<SelectListItem>)ViewBag.MedicineList, new { @class = "form-control", @id = "ddlMedicine" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Amount</label>
-                <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.Amount, new { @class = "form-control", @id = "tbAmount" })
-                </div>
-            </div>
-            <br />
-            <footer class="panel-footer">
-                <button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.Save</button>
-                <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
-            </footer>
-        </form>
-    </div>
+	<form class="form-horizontal form-bordered" method="post" action="/MasterData/CreateOrEditProductMedicine">
+		<header class="panel-heading">
+			<div class="panel-actions">
+				<a href="#" class="fa fa-caret-down"></a>
+			</div>
+			<h5 class="panel-title">Form @ViewBag.ActionType Product Medicine</h5>
+		</header>
+		<div class="panel-body">
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Product</label>
+				<div class="col-md-4">
+					@Html.DropDownListFor(p => p.ProductID, (IEnumerable<SelectListItem>)ViewBag.ProductList, new { @class = "form-control", @id = "ddlProduct" })
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Medicine</label>
+				<div class="col-md-4">
+					@Html.DropDownListFor(p => p.MedicineID, (IEnumerable<SelectListItem>)ViewBag.MedicineList, new { @class = "form-control", @id = "ddlMedicine" })
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Amount</label>
+				<div class="col-md-4">
+					@Html.TextBoxFor(x => x.Amount, new { @class = "form-control", @id = "tbAmount" })
+				</div>
+			</div>
+		</div>
+		<div class="panel-footer">
+			<button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.Save</button>
+			<button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
+		</div>
+	</form>
 </section>
 
 @section Scripts {
-    <script type="text/javascript">
+	<script type="text/javascript">
     $(document).ready(function () {
         $('#btnreset').click(function (e) {
             window.location.href = "/MasterData/ProductMedicineList";
@@ -76,5 +75,5 @@
         }
     });
 
-    </script>
+	</script>
 }
