--- a/Klinik.Web/Views/MasterData/CreateOrEditRole.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditRole.cshtml
@@ -1,44 +1,43 @@
 ﻿@model Klinik.Entities.MasterData.RoleModel
 
 @{
-    ViewBag.Title = "CreateOrEditRole";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+	ViewBag.Title = "CreateOrEditRole";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <section class="panel">
-    <header class="panel-heading">
-        <div class="panel-actions">
-            <a href="#" class="fa fa-caret-down"></a>
-        </div>
-        <h5 class="panel-title">Form @ViewBag.ActionType Role</h5>
-    </header>
-    <div class="panel-body">
-        <form class="form-horizontal form-bordered" method="post" action="/MasterData/CreateOrEditRole">
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Role</label>
-                <div class="col-md-4">
-                    @Html.HiddenFor(x => x.Id)
-                    @Html.TextBoxFor(x => x.RoleName, new { @class = "form-control", @id = "tbOrgCode" })
-                    @Html.ValidationMessageFor(m => m.RoleName, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Organization</label>
-                <div class="col-md-4">
-                    @Html.DropDownListFor(p => p.OrgID, (IEnumerable<SelectListItem>)ViewBag.Organisasi, new { @class = "form-control", @id = "ddlorganisasi" })
-                </div>
-            </div>
-            <br />
-            <footer class="panel-footer">
-                <button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.Save</button>
-                <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
-            </footer>
-        </form>
-    </div>
+	<form class="form-horizontal form-bordered" method="post" action="/MasterData/CreateOrEditRole">
+		<header class="panel-heading">
+			<div class="panel-actions">
+				<a href="#" class="fa fa-caret-down"></a>
+			</div>
+			<h5 class="panel-title">Form @ViewBag.ActionType Role</h5>
+		</header>
+		<div class="panel-body">
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Role</label>
+				<div class="col-md-4">
+					@Html.HiddenFor(x => x.Id)
+					@Html.TextBoxFor(x => x.RoleName, new { @class = "form-control", @id = "tbOrgCode" })
+					@Html.ValidationMessageFor(m => m.RoleName, "", new { @class = "text-danger" })
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Organization</label>
+				<div class="col-md-4">
+					@Html.DropDownListFor(p => p.OrgID, (IEnumerable<SelectListItem>)ViewBag.Organisasi, new { @class = "form-control", @id = "ddlorganisasi" })
+				</div>
+			</div>
+		</div>
+		<div class="panel-footer">
+			<button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.Save</button>
+			<button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
+		</div>
+	</form>
 </section>
 
 @section Scripts {
-    <script type="text/javascript">
+	<script type="text/javascript">
     $(document).ready(function () {
         $('#btnreset').click(function (e) {
             window.location.href = "/MasterData/RoleList";
@@ -71,5 +70,5 @@
         }
     });
 
-    </script>
+	</script>
 }
