--- a/Klinik.Web/Views/MasterData/CreateOrEditUser.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditUser.cshtml
@@ -6,75 +6,74 @@
 }
 
 <section class="panel">
-    <header class="panel-heading">
-        <div class="panel-actions">
-            <a href="#" class="fa fa-caret-down"></a>
-        </div>
-        <h5 class="panel-title">Form @ViewBag.ActionType User</h5>
-    </header>
-    <div class="panel-body">
-        <form class="form-horizontal form-bordered" method="post" action="/MasterData/CreateOrEditUser">
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Organization</label>
-                <div class="col-md-4">
-                    @Html.HiddenFor(x => x.Id)
-                    @Html.DropDownListFor(p => p.OrgID, (IEnumerable<SelectListItem>)ViewBag.Organisasi, new { @class = "form-control", @id = "ddlorganisasi" })
-                    @Html.ValidationMessageFor(m => m.OrgID, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Role</label>
-                <div class="col-md-4">
-                    @Html.DropDownListFor(p => p.RoleID, (IEnumerable<SelectListItem>)ViewBag.RoleList, new { @class = "form-control", @id = "ddlrole" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Employee</label>
-                <div class="col-md-4">
-                    @Html.DropDownListFor(p => p.EmployeeID, (IEnumerable<SelectListItem>)ViewBag.Employees, new { @class = "form-control", @id = "ddlemployee" })
-                    @Html.ValidationMessageFor(m => m.OrgID, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Username</label>
-                <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", @id = "tbUsrName" })
-                    @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">
-                    @Klinik.Resources.UIMessages.Password
-                </label>
-                <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.Password, new { @class = "form-control", @id = "tbUsrName", @type = "password" })
-                    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">
-                    @Klinik.Resources.UIMessages.ExpiredDate
-                </label>
-                <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.ExpiredDate, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "tbExpDate" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">
-                    @Klinik.Resources.UIMessages.Status
-                </label>
-                <div class="col-md-4">
-                    @Html.CheckBoxFor(x => x.Status, new { @class = "form-check-input", @id = "cbStatus" })
+	<form class="form-horizontal form-bordered" method="post" action="/MasterData/CreateOrEditUser">
+		<header class="panel-heading">
+			<div class="panel-actions">
+				<a href="#" class="fa fa-caret-down"></a>
+			</div>
+			<h5 class="panel-title">Form @ViewBag.ActionType User</h5>
+		</header>
+		<div class="panel-body">
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Organization</label>
+				<div class="col-md-4">
+					@Html.HiddenFor(x => x.Id)
+					@Html.DropDownListFor(p => p.OrgID, (IEnumerable<SelectListItem>)ViewBag.Organisasi, new { @class = "form-control", @id = "ddlorganisasi" })
+					@Html.ValidationMessageFor(m => m.OrgID, "", new { @class = "text-danger" })
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Role</label>
+				<div class="col-md-4">
+					@Html.DropDownListFor(p => p.RoleID, (IEnumerable<SelectListItem>)ViewBag.RoleList, new { @class = "form-control", @id = "ddlrole" })
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Employee</label>
+				<div class="col-md-4">
+					@Html.DropDownListFor(p => p.EmployeeID, (IEnumerable<SelectListItem>)ViewBag.Employees, new { @class = "form-control", @id = "ddlemployee" })
+					@Html.ValidationMessageFor(m => m.OrgID, "", new { @class = "text-danger" })
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Username</label>
+				<div class="col-md-4">
+					@Html.TextBoxFor(x => x.UserName, new { @class = "form-control", @id = "tbUsrName" })
+					@Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">
+					@Klinik.Resources.UIMessages.Password
+				</label>
+				<div class="col-md-4">
+					@Html.TextBoxFor(x => x.Password, new { @class = "form-control", @id = "tbUsrName", @type = "password" })
+					@Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">
+					@Klinik.Resources.UIMessages.ExpiredDate
+				</label>
+				<div class="col-md-4">
+					@Html.TextBoxFor(x => x.ExpiredDate, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "tbExpDate" })
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">
+					@Klinik.Resources.UIMessages.Status
+				</label>
+				<div class="col-md-4">
+					@Html.CheckBoxFor(x => x.Status, new { @class = "form-check-input", @id = "cbStatus" })
 
-                </div>
-            </div>
-            <br />
-            <footer class="panel-footer">
-                <button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.Save</button>
-                <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
-            </footer>
-        </form>
-    </div>
+				</div>
+			</div>
+		</div>
+		<div class="panel-footer">
+			<button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.Save</button>
+			<button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
+		</div>
+	</form>
 </section>
 
 @section Scripts {
