--- a/Klinik.Web/Views/MasterData/CreateOrEditVendor.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditVendor.cshtml
@@ -1,36 +1,35 @@
 ﻿@model Klinik.Entities.MasterData.VendorModel
 
 @{
-    ViewBag.Title = "CreateOrEditVendor";
+	ViewBag.Title = "CreateOrEditVendor";
 }
 
 <section class="panel">
-    <header class="panel-heading">
-        <div class="panel-actions">
-            <a href="#" class="fa fa-caret-down"></a>
-        </div>
-        <h5 class="panel-title">Form @ViewBag.ActionType Vendor</h5>
-    </header>
-    <div class="panel-body">
-        <form class="form-horizontal form-bordered" method="post" action="/MasterData/CreateOrEditVendor">
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Name</label>
-                <div class="col-md-4">
-                    @Html.HiddenFor(x => x.Id)
-                    @Html.TextBoxFor(x => x.namavendor, new { @class = "form-control", @id = "namavendor" })
-                </div>
-            </div>
-            <br />
-            <footer class="panel-footer">
-                <button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.Save</button>
-                <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
-            </footer>
-        </form>
-    </div>
+	<form class="form-horizontal form-bordered" method="post" action="/MasterData/CreateOrEditVendor">
+		<header class="panel-heading">
+			<div class="panel-actions">
+				<a href="#" class="fa fa-caret-down"></a>
+			</div>
+			<h5 class="panel-title">Form @ViewBag.ActionType Vendor</h5>
+		</header>
+		<div class="panel-body">
+			<div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Name</label>
+				<div class="col-md-4">
+					@Html.HiddenFor(x => x.Id)
+					@Html.TextBoxFor(x => x.namavendor, new { @class = "form-control", @id = "namavendor" })
+				</div>
+			</div>
+		</div>
+		<div class="panel-footer">
+			<button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.Save</button>
+			<button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
+		</div>
+	</form>
 </section>
 
 @section Scripts {
-    <script type="text/javascript">
+	<script type="text/javascript">
     $(document).ready(function () {
         $('#btnreset').click(function (e) {
             window.location.href = "/MasterData/VendorList";
@@ -61,5 +60,5 @@
         }
     });
 
-    </script>
+	</script>
 }
