--- a/Klinik.Web/Views/Pharmacy/Prescription.cshtml
+++ b/Klinik.Web/Views/Pharmacy/Prescription.cshtml
@@ -27,6 +27,10 @@
 				<table id="tbPrescription" class="table table-striped table-bordered dt-responsive" cellspacing="0">
 					<thead>
 						<tr>
+							<th colspan="5"><center>@Klinik.Resources.UIMessages.MedicineList</center></th>
+							<th colspan="4"><center>@Klinik.Resources.UIMessages.Validation</center></th>							
+						</tr>
+						<tr>
 							<th style="width:20px;">NO</th>
 							<th>@Klinik.Resources.UIMessages.MedicineName</th>
 							<th>@Klinik.Resources.UIMessages.Dose</th>
