--- a/Klinik.Web/Views/PurchaseRequest/PurchaseRequestList.cshtml
+++ b/Klinik.Web/Views/PurchaseRequest/PurchaseRequestList.cshtml
@@ -211,7 +211,7 @@
         }
 
         var Validasi = function (ID) {
-            var r = confirm("@Klinik.Resources.UIMessages.ApproveConfirmation" + ID + " ) ?");
+            var r = confirm("@Klinik.Resources.UIMessages.ValidationConfirmation"+" ?");
             if (r == true) {
             ValidasiPR(ID);
         }
