--- a/Klinik.Web/Views/PurchaseOrder/CreateOrEditPurchaseOrder.cshtml
+++ b/Klinik.Web/Views/PurchaseOrder/CreateOrEditPurchaseOrder.cshtml
@@ -107,12 +107,21 @@
                         <td><input type="text" class="form-control" value="@item.qty_by_ho" disabled="disabled" /></td>
                         <td><input type="text" class="form-control" value="@item.remark_by_ho" disabled="disabled" /></td>
                         <td><input type="checkbox" value="@(item.Verified == true ? "true" : "false")" @(item.Verified == true ? "checked" : "") disabled></td>
+                        <td hidden>@item.OrderNumber</td>
                         <td>
-                            <button class="save-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseOrder/EditPurchaseOrderDetail" style="display:none;">Save</button>
-                            <button class="edit-purchaseorderdetail btn btn-success btn-sm">Edit</button>
-                            <button class="btn btn-danger btn-sm delete-purchaseorderdetail">Delete</button>
-                            <button class="btn btn-info btn-sm subtitusi">Subtitusi</button>
-                            <img src="~/Content/images/loading.gif" style="height: 30px;display:none;" class="image-loading" />
+                            @if (Model.approve != null)
+                            {
+                                <button class="save-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseOrder/EditPurchaseOrderDetail" style="display:none;">Save</button>
+                                <button class="edit-purchaseorderdetail btn btn-success btn-sm">Edit</button>
+                                <button class="btn btn-danger btn-sm delete-purchaseorderdetail" disabled>Delete</button>
+                                <button class="btn btn-info btn-sm subtitusi">Subtitusi</button>
+                                <img src="~/Content/images/loading.gif" style="height: 30px;display:none;" class="image-loading" />
+                            }
+                            else
+                            {
+                                <button class="btn btn-warning btn-sm" disabled>PO Not Approved</button>
+                            }
+
                         </td>
                     </tr>
                         }
@@ -121,7 +130,7 @@
             </table>
         </div>
         <br />
-        <form id="purchaseorderdetail">
+        @*<form id="purchaseorderdetail">
             <div class="form-group">
                 <input type="text" hidden id="PurchaseOrderDetailId" />
                 <input type="text" hidden id="ProductId" />
@@ -169,9 +178,9 @@
             <footer class="col-md-12 text-right">
                 <input type="button" id="btnAdd" class="btn btn-success float-right" value="Add" />
             </footer>
-        </form>
+        </form>*@
         <footer class="panel-footer">
-            <button type="submit" class="btn btn-primary savepurchasedetail" data-parameterone="_deliveryorderpusat" data-parametertwo="deliveryOrderDetailpusatModels" data-url="/PurchaseOrder/CreateOrEditPurchaseOrder">@Klinik.Resources.UIMessages.Save</button>
+            <button type="submit" class="btn btn-primary savepurchasedetail" data-parameterone="_deliveryorderpusat" data-parametertwo="deliveryOrderDetailpusatModels" data-url="/PurchaseOrder/CreateOrEditPurchaseOrder">@Klinik.Resources.UIMessages.Edit</button>
             <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
         </footer>
     </div>
