--- a/Klinik.Web/Views/PurchaseOrder/PurchaseOrderList.cshtml
+++ b/Klinik.Web/Views/PurchaseOrder/PurchaseOrderList.cshtml
@@ -11,7 +11,7 @@
         </div>
         <h5 class="panel-title">
             @Klinik.Resources.UIMessages.PurchaseOrderList
-            <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
+            @*<button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>*@
         </h5>
     </header>
     <div class="panel-body">
@@ -109,9 +109,10 @@
                 {
                     "render": function (data, type, full, meta)
                     {
-                         var type = full['approve'] == null ? 'Approve' : 'Print';
-                        var button = full['approve'] == null ? "<button class='btn btn-success btn-xs' onclick='" + type + "(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Approve</button>" : '<a class="btn btn-success btn-xs" href="/PurchaseOrder/PrintPurchaseOrder?id=' + full.Id + '">' + type + '</a>';
-                        return '<a class="btn btn-info btn-xs" href="/PurchaseOrder/CreateOrEditPurchaseOrder?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger btn-xs' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>" + " |" + button
+                        var valisasi = full['Validasi'] != null ? '' : " | <button class='btn btn-success btn-xs' onclick='Validasi(" + full['Id'] + ")' >Validasi</button>";
+                        var type = full['approve'] == null ? 'Approve' : 'Print';
+                        var button = full['approve'] == null ? "<button class='btn btn-success btn-xs' onclick='" + type + "(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Approve</button>" : '<a class="btn btn-success btn-xs" href="/PurchaseOrder/PrintPurchaseOrder?id=' + full.Id + '">' + type + '</a>'+ valisasi;
+                        return '<a class="btn btn-info btn-xs" href="/PurchaseOrder/CreateOrEditPurchaseOrder?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger btn-xs' onclick='Delete(" + full['Id'] + ")' disabled='disabled'>@Klinik.Resources.UIMessages.Delete</button>" + " |" + button
                     }
                 }
 
@@ -150,6 +151,14 @@
             var r = confirm("@Klinik.Resources.UIMessages.ApproveConfirmation" + ID + " ) ?");
             if (r == true) {
             PrintDO(ID);
+        }
+        return false;
+        }
+
+        var Validasi = function (ID) {
+            var r = confirm("@Klinik.Resources.UIMessages.ValidationConfirmation"+" DO ?");
+            if (r == true) {
+            ValidasiPO(ID);
         }
         return false;
         }
@@ -194,6 +203,24 @@
         $.ajax({
             url: '/PurchaseOrder/PrintPurchaseOrder?id=' + Id,
             type: 'GET',
+            success: function (result) {
+                if (result.Status) {
+                    toastr.options.closeButton = false;
+                    toastr.options.timeOut = 2000;
+                    location.reload();
+                    toastr.success(result.Message);
+                }
+                else {
+                    toastr.error(result.Message);
+                }
+            }
+        });
+        }
+
+        function ValidasiPO(Id) {
+        $.ajax({
+            url: '/PurchaseOrder/ValidationPurchaseOrder?id=' + Id,
+            type: 'POST',
             success: function (result) {
                 if (result.Status) {
                     toastr.options.closeButton = false;
